--- a/css/style.css
+++ b/css/style.css
@@ -357,43 +357,69 @@ td, th {
   padding: 30px 5%;
 }
 
+#content {
+  float: left;
+  width: 65%;
+}
+@media screen and (max-width: 35.5em) {
+  #content {
+    width: 100%;
+  }
+}
+
+#sidebar {
+  float: right;
+  width: 25%;
+}
+@media screen and (max-width: 35.5em) {
+  #sidebar {
+    float: left;
+    width: 100%;
+  }
+}
+
 #fourofour {
   display: block;
   margin: 0 auto;
   padding-top: 50px;
   padding-bottom: 150px;
+  width: 50%;
 }
-
-@media screen and (min-width: 35.5em) {
-  #content {
-    float: left;
-    width: 65%;
-  }
-
-  #sidebar {
-    float: right;
-    width: 25%;
-  }
-
+@media screen and (max-width: 48em) {
   #fourofour {
-    width: 50%;
+    width: 80%;
   }
 }
+@media screen and (max-width: 35.5em) {
+  #fourofour {
+    width: 100%;
+  }
+}
+
 #masthead {
   background: #5C6772;
   padding: 20px 0;
 }
-
-@media screen and (min-width: 30em) {
+#masthead #branding {
+  float: left;
+  width: 30%;
+}
+@media screen and (max-width: 30em) {
   #masthead #branding {
-    float: left;
-    width: 30%;
-  }
-  #masthead #site-navigation {
-    float: right;
-    width: 70%;
+    width: 100%;
   }
 }
+#masthead #site-navigation {
+  float: right;
+  width: 70%;
+}
+@media screen and (max-width: 30em) {
+  #masthead #site-navigation {
+    float: left;
+    width: 100%;
+  }
+}
+
 #branding #logo a {
   background: url("../images/logo.png") no-repeat;
   display: block;
@@ -404,7 +430,7 @@ td, th {
 @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6 / 2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
   #branding #logo a {
     /* on retina, use image that's scaled by 2 */
-    background-image: url("../images/logo2x.png");
+    background-image: url("../images/logo@2x.png");
     background-size: 200px 50px;
   }
 }
@@ -737,7 +763,6 @@ input[type="submit"] {
   padding: 10px 15px;
   text-transform: uppercase;
 }
-
 button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
@@ -745,14 +770,12 @@ input[type="submit"]:hover {
   background: #5C6772;
   border-color: none;
 }
-
-button:focus,
+button:focus, button:active,
 input[type="button"]:focus,
-input[type="reset"]:focus,
-input[type="submit"]:focus,
-button:active,
 input[type="button"]:active,
+input[type="reset"]:focus,
 input[type="reset"]:active,
+input[type="submit"]:focus,
 input[type="submit"]:active {
   border-color: #aaa;
 }
@@ -796,7 +819,6 @@ textarea {
   background-clip: padding-box;
   /* stops bg color from leaking outside the border: */
 }
-
 input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="url"]:focus,
