--- a/sass/forms/_fields.scss
+++ b/sass/forms/_fields.scss
@@ -27,15 +27,9 @@ textarea {
 	color: $color__text-input;
 	border: 1px solid $color__border-input;
 	@include border-radius(2px);
-}
-
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="url"]:focus,
-input[type="password"]:focus,
-input[type="search"]:focus,
-textarea:focus {
-	color: $color__text-input-focus;
+	&:focus {
+		color: $color__text-input-focus;
+	}
 }
 
 input[type="text"],
