--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Bluelime Starter theme
 Theme URI: http://www.bluelimemedia.com
-Description: Respnsive Starter theme with Sass
+Description: Responsive Starter theme with Sass
 Version: 1.0
 
 License: GNU General Public License v2.0
