--- a/sass/blog/_blog.scss
+++ b/sass/blog/_blog.scss
@@ -1,6 +1,8 @@
 @import "entrymeta";
 
-@import "post-navigation";
+@import "post-pagination";
+
+//@import "post-navigation";
 
 @import "comment-list";
 
