--- a/css/style.css
+++ b/css/style.css
@@ -356,12 +356,17 @@ td, th {
 #main {
   padding: 30px 0;
 }
+@media screen and (max-width: 1200px) {
+  #main {
+    padding: 30px 2%;
+  }
+}
 
 #content {
   float: left;
   width: 65%;
 }
-@media screen and (max-width: 35.5em) {
+@media screen and (max-width: 37.5em) {
   #content {
     width: 100%;
   }
@@ -371,7 +376,7 @@ td, th {
   float: right;
   width: 25%;
 }
-@media screen and (max-width: 35.5em) {
+@media screen and (max-width: 37.5em) {
   #sidebar {
     float: left;
     width: 100%;
@@ -390,7 +395,7 @@ td, th {
     width: 80%;
   }
 }
-@media screen and (max-width: 35.5em) {
+@media screen and (max-width: 37.5em) {
   #fourofour {
     width: 100%;
   }
@@ -404,7 +409,7 @@ td, th {
   float: left;
   width: 30%;
 }
-@media screen and (max-width: 30em) {
+@media screen and (max-width: 37.5em) {
   #masthead #branding {
     width: 100%;
   }
@@ -413,10 +418,15 @@ td, th {
   float: right;
   width: 70%;
 }
-@media screen and (max-width: 30em) {
+@media screen and (max-width: 37.5em) {
   #masthead #site-navigation {
     float: left;
     width: 100%;
+  }
+}
+@media screen and (max-width: 37.5em) {
+  #masthead {
+    padding-bottom: 0;
   }
 }
 
@@ -438,71 +448,81 @@ td, th {
   display: none;
 }
 
+.main-navigation {
+  position: relative;
+  display: block;
+}
 .main-navigation ul {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding-left: 0;
+  list-style: none;
+}
+.main-navigation ul li {
+  position: relative;
+  float: left;
+}
+.main-navigation ul li:hover {
+  color: #fff;
+  background: #33B26E;
+}
+.main-navigation ul li:hover ul {
+  display: block;
+}
+.main-navigation ul li a {
+  color: #fff;
+  display: block;
+  padding: 5px 15px;
+  text-decoration: none;
+}
+.main-navigation ul li a:hover {
+  background: #33B26E;
+  color: #fff;
 }
 .main-navigation ul ul {
-  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
   background: #fff;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+  display: none;
   float: left;
+  left: 0;
+  padding: 0;
   position: absolute;
-  left: -999em;
   z-index: 99999;
 }
 .main-navigation ul ul ul {
-  left: -999em;
   top: 0;
-}
-.main-navigation ul ul li:hover > ul {
   left: 100%;
 }
 .main-navigation ul ul a {
   color: #404040;
   width: 200px;
 }
-.main-navigation ul ul a:hover {
+.main-navigation ul ul a:hover, .main-navigation ul ul a:focus {
   background: #33B26E;
   color: #fff;
 }
-.main-navigation ul li:hover > ul {
-  left: auto;
-}
-.main-navigation li {
-  float: left;
-  position: relative;
-}
-.main-navigation a {
-  color: #fff;
-  display: block;
-  padding: 5px 15px;
-  text-decoration: none;
-}
-.main-navigation a:hover {
-  color: #33B26E;
-}
+.main-navigation .current_page_ancestor,
 .main-navigation .current_page_item > a,
-.main-navigation .current-menu-item > a {
-  color: #33B26E;
+.main-navigation .current-menu-item > a,
+.main-navigation .current_page_item > a:hover,
+.main-navigation .current-menu-item > a:hover,
+.main-navigation .current_page_item > a:focus,
+.main-navigation .current-menu-item > a:focus {
+  background: #33B26E;
+  color: #fff;
+}
+.main-navigation ul ul .current_page_parent,
+.main-navigation .current_page_parent .current_page_item > a {
+  background: #fff;
+  color: #404040;
 }
 
-/* Small menu */
 .menu-toggle {
   display: none;
-  -webkit-appearance: none;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 30em) {
-  .main-navigation ul {
-    display: none;
-  }
-
-  .menu-toggle,
-  .main-navigation.toggled .nav-menu {
-    display: block;
-  }
-
   .menu-toggle {
     background: #404040;
     -webkit-border-radius: 0;
@@ -510,20 +530,24 @@ td, th {
     background-clip: padding-box;
     /* stops bg color from leaking outside the border: */
     color: #fff;
+    display: inline-block;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
     font-size: 1.6rem;
-    padding: 10px 22px;
     margin: 0;
+    padding: 10px 22px;
+    text-decoration: none;
     text-align: left;
     text-transform: uppercase;
     width: 100%;
   }
-  .menu-toggle:hover, .menu-toggle:focus {
-    background: #5C6772;
+  .menu-toggle a,
+  .menu-toggle a:hover {
+    color: #fff;
+    text-decoration: none;
   }
-  .menu-toggle:focus {
-    outline: 0 none;
+  .menu-toggle:hover {
+    background: #5C6772;
   }
   .menu-toggle:before {
     content: '\2261';
@@ -532,29 +556,58 @@ td, th {
     margin-right: 10px;
   }
 
-  .main-small-navigation ul {
-    margin: 0;
-    list-style: none;
+  .main-navigation.toggled .nav-menu {
+    display: block;
   }
-  .main-small-navigation ul li {
+
+  .main-navigation ul {
+    display: none;
+    padding-left: 0;
+  }
+  .main-navigation ul li {
+    float: none;
+  }
+  .main-navigation ul li a {
     background: #404040;
+    color: white;
+    padding: 10px 20px;
   }
-  .main-small-navigation ul li:hover {
+  .main-navigation ul li a:hover {
     background: #5C6772;
   }
-  .main-small-navigation ul li a {
+  .main-navigation ul ul,
+  .main-navigation ul ul ul {
+    box-shadow: none;
+    position: relative;
+    top: inherit;
+    left: 0;
     display: block;
+    float: none;
+    width: 100%;
+  }
+  .main-navigation ul ul a {
     color: #fff;
-    padding: 10px 40px;
-    text-decoration: none;
+    width: 100%;
   }
-
-  .main-small-navigation ul ul a {
-    padding-left: 60px;
+  .main-navigation ul ul a:hover {
+    background: #5C6772;
   }
-
-  .main-small-navigation ul ul ul a {
-    padding-left: 80px;
+  .main-navigation .current_page_ancestor,
+  .main-navigation .current_page_item > a,
+  .main-navigation .current-menu-item > a,
+  .main-navigation ul ul .current_page_parent,
+  .main-navigation .current_page_parent .current_page_item > a {
+    background: #404040;
+    color: #fff;
+  }
+  .main-navigation .current_page_item li:hover,
+  .main-navigation .current_page_item li:focus,
+  .main-navigation .current_page_item li > a:focus,
+  .main-navigation .current-menu-item li > a:focus,
+  .main-navigation .current_page_item > a:hover,
+  .main-navigation .current-menu-item > a:hover {
+    background: #5C6772;
+    color: #fff;
   }
 }
 .entrymeta {
