--- a/sass/navigation/_main-nav.scss
+++ b/sass/navigation/_main-nav.scss
@@ -5,7 +5,6 @@
 		list-style: none;
 	    margin: 0;
 	    padding-left: 0;
-	    list-style: none;
 		li {
 		    position: relative;
 		    float: left;
@@ -51,7 +50,8 @@
 			}
 		}
 	}
-	.current_page_ancestor,
+	.current_page_parent a, 
+	.current_page_ancestor a,
 	.current_page_item > a,
 	.current-menu-item > a,
 	.current_page_item > a:hover,
