--- a/sass/navigation/_mobile.scss
+++ b/sass/navigation/_mobile.scss
@@ -4,7 +4,7 @@
 	-webkit-appearance: none;
 }
 
-@media screen and (max-width: $phone-landscape) {
+@media screen and (max-width: $phone-wide-landscape) {
 	.main-navigation ul {
 		display: none;
 	}
