--- a/sass/media/_alignments.scss
+++ b/sass/media/_alignments.scss
@@ -15,3 +15,13 @@
 	margin-top: 1em;
 	margin-bottom: 1em;
 }
+
+@media screen and (max-width: $phone-landscape) {
+	.alignleft, 
+	.alignright {
+		float:none;
+		@include center-block;
+		margin-top: 1em;
+		margin-bottom: 1em;
+	}
+}
