--- a/sass/forms/_buttons.scss
+++ b/sass/forms/_buttons.scss
@@ -1,13 +1,9 @@
-button,
-input[type="button"],
-input[type="reset"],
-input[type="submit"] {
+.button {
 	background: $color__background-button;
 	border: none;
 	@include border-radius(2px);
 	color: $white;
 	cursor: pointer; /* Improves usability and consistency of cursor style between image-type 'input' and others */
-	-webkit-appearance: button; /* Corrects inability to style clickable 'input' types in iOS */
 	@include font-size(14px);
 	line-height: 1;
 	padding:  10px 15px;
@@ -20,5 +16,13 @@ input[type="submit"] {
 	&:active {
 		border-color: $color__border-button-focus;
 	}
-
 }
+
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+	@extend .button;
+	-webkit-appearance: button; /* Corrects inability to style clickable 'input' types in iOS */
+}
+
