Added max width to search box.

--- a/css/style.css
+++ b/css/style.css
@@ -939,6 +939,7 @@ textarea {
 /* Search Form
 -------------------------------------------*/
 #searchform {
+  max-width: 400px;
   position: relative;
 }
 #searchform input {
