Removed color of links in sidebar.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -41,6 +41,7 @@ $font__line-height-pre: 1.6;
 // Media queries
 $desktop-wide:          75.00em;  // 1200px
 $desktop-small:         64.00em;  // 1024px
+$desktop-tiny:          60.00em;  // 960px
 $tablet-portrait:       48.00em;  // 768px
 $phone-wide-landscape:  37.50em;  // 600px
 $phone-landscape:       30.00em;  // 480px
