--- a/sass/layout/_404.scss
+++ b/sass/layout/_404.scss
@@ -3,12 +3,11 @@
 	@include center-block;
 	padding-top: 50px;
 	padding-bottom: 150px;
-	width: 50%;
-	@media screen and (max-width: $tablet-portrait) {	
+	width: 100%;	
+	@media screen and (min-width: $phone-wide-landscape) {
 		width: 80%;
 	}
-	@media screen and (max-width: $phone-wide-landscape) {
-		width: 100%;
+	@media screen and (min-width: $tablet-portrait) {
+		width: 50%;
 	}
-	
 }
