--- a/sass/media/_alignments.scss
+++ b/sass/media/_alignments.scss
@@ -1,27 +1,20 @@
-.alignleft {
-	display: inline;
-	float: left;
-	margin-right: 1.5em;
-}
-
+.aligncenter,
+.alignleft, 
 .alignright {
-	display: inline;
-	float: right;
-	margin-left: 1.5em;
-}
-
-.aligncenter {
 	@include center-block;
 	margin-top: 1em;
 	margin-bottom: 1em;
 }
 
-@media screen and (max-width: $phone-landscape) {
-	.alignleft, 
+@media screen and (min-width: $phone-landscape) {
+	.alignleft {
+		display: inline;
+		float: left;
+		margin-right: 1.5em;
+	}
 	.alignright {
-		float:none;
-		@include center-block;
-		margin-top: 1em;
-		margin-bottom: 1em;
+		display: inline;
+		float: right;
+		margin-left: 1.5em;
 	}
 }
