--- a/sass/footer/_footer.scss
+++ b/sass/footer/_footer.scss
@@ -1,11 +1,10 @@
 /* Footer area 
 ---------------------*/
-#footer {
+.footer-area {
 	background: $offwhite;
 	text-align: center;
 	p {
 		color: $grey;
-		@include font-size(12px);
 		padding: 0.625em;
 	}	
 	a {
