--- a/sass/blog/_comment-form.scss
+++ b/sass/blog/_comment-form.scss
@@ -1,8 +1,8 @@
-#respond {
+.comment-respond {
 	margin-top: 30px;
 }
 
-#commentform {
+.comment-form {
 	padding: 20px 0;
 	p {
 		margin-bottom: 10px;
