--- a/sass/media/_alignments.scss
+++ b/sass/media/_alignments.scss
@@ -6,15 +6,13 @@
 	margin-bottom: 1em;
 }
 
-@media screen and (min-width: $phone-landscape) {
+@media screen and (min-width: $phone-wide-landscape) {
 	.alignleft {
-		display: inline;
 		float: left;
-		margin-right: 1.5em;
+		margin: 0 1.5em 0 0;
 	}
 	.alignright {
-		display: inline;
 		float: right;
-		margin-left: 1.5em;
+		margin: 0 0 0 1.5em;
 	}
 }
