--- a/sass/sidebar/_sidebar.scss
+++ b/sass/sidebar/_sidebar.scss
@@ -4,10 +4,9 @@
 	padding: 0 0 30px 0;
 }
 
-#sidebar{
-	h4 {
+.primary-sidebar {
+	.sidebar-title {
 		border-bottom: 1px solid $light-grey;
-		@include font-size(18px);
 		margin: 0 0 1em; 
 		padding: 0 0 0.5em; 
 		text-transform: uppercase;	
@@ -25,6 +24,3 @@
 	}
 } 
 
-.widget_search label {
-	display:none;
-}
