--- a/sass/typography/_headings.scss
+++ b/sass/typography/_headings.scss
@@ -1,8 +1,5 @@
 h1, h2, h3, h4, h5, h6 {
 	clear: both;
-}
-
-h1,h2,h3,h4,h5,h6 {
 	color: $color__heading;
 	font-family: $font__serif;
 	font-weight: 400;
@@ -13,14 +10,18 @@ h1 {
 	margin: 0 0 0.625em;
 }
 
-h2, h3, h4, h5, h6 {
+h2 {
 	@include font-size(22px);
 	margin: 0.625em 0;
+	&.post-title a {
+		text-decoration: none;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
 }
 
-h2.post-title a {
-	text-decoration: none;
-	&:hover {
-		text-decoration: underline;
-	}
+h3, h4, h5, h6 {
+	@include font-size(18px);
+	margin: 0.625em 0;
 }
