--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -12,6 +12,9 @@ textarea {
 p, ul, ol, table, td, th, dl, dd, dt {
 	@include font-size(16px);
 }
+.small-text {
+	@include font-size(13px);
+}
 
 @import "copy";
 
