--- a/sass/blog/_entrymeta.scss
+++ b/sass/blog/_entrymeta.scss
@@ -1,8 +1,6 @@
 .entrymeta {
 	color: $grey;
-	border-top: 1px solid $light-grey;
-	margin: 0.625em 0; 
-	padding: 0.3125em 0;
+	margin-bottom: 1em;
 	p {
 		margin: 0.3125em 0; 
 	}
