--- a/sass/typography/_headings.scss
+++ b/sass/typography/_headings.scss
@@ -13,7 +13,7 @@ h1 {
 h2 {
 	@include font-size(22px);
 	margin: 0.625em 0;
-	&.post-title a {
+	a {
 		text-decoration: none;
 		&:hover {
 			text-decoration: underline;
